--- a/frontend/src/pages/Landing/styles.css
+++ b/frontend/src/pages/Landing/styles.css
@@ -1,11 +1,11 @@
-.container {
+#landing-container {
     height: 100%;
     width: 100%;
     display: flex;
     min-width: 875px;
 }
 
-.lost-container {
+#landing-container .lost-container {
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -15,7 +15,7 @@
     min-width: 400px;
 }
 
-.found-container {
+#landing-container .found-container {
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -25,7 +25,7 @@
     min-width: 500px;
 }
 
-.logo {
+#landing-container img {
     height: 100px;
     left: 0;
     right: 0;
@@ -35,12 +35,12 @@
     position: absolute;
 }
 
-.container-title {
+#landing-container section p {
     font-size: 28px;
     color: #000;
 }
 
-.button {
+#landing-container section button {
     background-color: inherit;
     font-size: 18px;
     padding: 10px;
@@ -59,7 +59,7 @@
     color: #3172B7;
 }
 
-.link {
+#landing-container section link {
     text-decoration: none;
     margin-top: 10px; 
 
@@ -79,6 +79,7 @@
 }
 
 
-.button:hover, .link:hover {
+#landing-container section button:hover, 
+#landing-container section link:hover {
     opacity: 0.5;
 }
