--- a/frontend/src/pages/NewLost/styles.css
+++ b/frontend/src/pages/NewLost/styles.css
@@ -66,6 +66,12 @@
     margin-bottom: 20px;
 }
 
+#new-lost-container form legend span {
+    font-size: 14px;
+    font-weight: normal;
+    color: #6c6c80;
+  }
+
 #new-lost-container form .field {
     flex: 1;
   
@@ -82,6 +88,27 @@
     padding: 16px 24px;
     font-size: 16px;
     color: #6c6c80;
+}
+
+#new-lost-container form textarea {
+    flex: 1;
+    background: #f0f0f5;
+    border-radius: 8px;
+    border: 0;
+    padding: 16px 24px;
+    font-size: 16px;
+    color: #6c6c80;
+    height: 500px;
+    resize: none;
+}
+
+#new-lost-container form .t-field {
+    flex: 1;
+  
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 24px;
+    height: 180px;
 }
 
 #new-lost-container form input::placeholder {
@@ -106,9 +133,9 @@
     color: #6c6c80;
 }
 
-#page-create-point form .leaflet-container {
+#new-lost-container form .leaflet-container {
     width: 100%;
-    height: 350px;
+    height: 450px;
     border-radius: 8px;
     margin-bottom: 24px;
 }
