--- a/frontend/src/pages/Landing/styles.css
+++ b/frontend/src/pages/Landing/styles.css
@@ -40,26 +40,8 @@
     color: #000;
 }
 
-#landing-container section button {
-    background-color: inherit;
-    font-size: 18px;
-    padding: 10px;
-    border-radius: 8px;
-    margin: 10px 0;
-    transition: opacity 0.2s;
-}
 
-.lost-button {
-    border: 2px solid #C53030;
-    color: #C53030; 
-}
-
-.found-button {
-    border: 2px solid #3172B7;
-    color: #3172B7;
-}
-
-#landing-container section link {
+#landing-container section a {
     text-decoration: none;
     margin-top: 10px; 
 
@@ -78,8 +60,6 @@
     color: #3172B7;
 }
 
-
-#landing-container section button:hover, 
 #landing-container section link:hover {
     opacity: 0.5;
 }
