--- a/frontend/src/pages/NewLost/styles.css
+++ b/frontend/src/pages/NewLost/styles.css
@@ -44,6 +44,8 @@
     border: 1px solid #C53030;
     padding: 30px 50px;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
 }
 
 #new-lost-container form .title-box {
@@ -80,16 +82,6 @@
     margin-bottom: 24px;
 }
 
-#new-lost-container form input {
-    flex: 1;
-    background: #f0f0f5;
-    border-radius: 8px;
-    border: 0;
-    padding: 16px 24px;
-    font-size: 16px;
-    color: #6c6c80;
-}
-
 #new-lost-container form textarea {
     flex: 1;
     background: #f0f0f5;
@@ -111,9 +103,6 @@
     height: 180px;
 }
 
-#new-lost-container form input::placeholder {
-    color: #a0a0b2;
-}
 
 #new-lost-container form label {
     font-size: 16px;
@@ -138,4 +127,8 @@
     height: 450px;
     border-radius: 8px;
     margin-bottom: 24px;
+}
+
+#new-lost-container form button {
+    align-self: flex-end;
 }
