--- a/frontend/src/pages/NewLost/styles.css
+++ b/frontend/src/pages/NewLost/styles.css
@@ -1,12 +1,17 @@
 #new-lost-container {
     height: 1fr;
     width: 100%;
-    background: #FDDEDE;
     padding: 80px 20px;
     
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+    background-color: #FDDEDE;
+    background-image: url('../../assets/lost-item.png');
+    background-position: 118% 0;
+    background-size: 1000px;
+    background-repeat: no-repeat;
 }
 
 #new-lost-container form {
